--- a/octoprint_forcelogin/templates/parts/forcelogin_javascripts.jinja2
+++ b/octoprint_forcelogin/templates/parts/forcelogin_javascripts.jinja2
@@ -4,7 +4,7 @@
     var UI_API_KEY = "{{ uiApiKey }}";
     var BASE_URL = "{{ url_for('index') }}";
 </script>
-<script src="{{ url_for("static", filename="js/lib/jquery/jquery-2.1.4.min.js") }}"></script>
+<script src="{{ url_for("static", filename="js/lib/jquery/jquery.min.js") }}"></script>
 <script src="{{ url_for("static", filename="js/lib/bootstrap/bootstrap.js") }}"></script>
 <script src="{{ url_for("static", filename="js/lib/lodash.min.js") }}"></script>
 
